--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
