--- a/client/package.json
+++ b/client/package.json
@@ -6,23 +6,29 @@
     "@date-io/date-fns": "^2.8.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@syncfusion/ej2-react-schedule": "^18.2.54",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.15.0",
-    "install-peers": "^1.0.3",
+    "dependencies": "0.0.1",
+    "install-peerdeps": "^2.0.3",
     "jwt-decode": "^2.2.0",
+    "material-ui-rating": "^4.2.0",
     "moment": "^2.27.0",
+    "peer": "^0.5.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3",
+    "redux-persist": "^6.0.0",
+    "yourself": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "install-peers": "^1.0.3",
+    "redux-mock-store": "^1.5.4"
   }
 }
